# aenig4

./: .gitignore  CHANGELOG.md  Makefile.am  NEWS  README  README.md  bootstrap  configure.ac  mkwin
doc/: Makefile.am  aenig4.h2m
src/: Makefile.am  aenig4.c  ngetopt.c  ngetopt.h
